# agentic-workflow-architecture

./: .gitignore  README.md  release_notes.md
.agent/rules/: ai-rules.md  api-rules.md  coding-rules.md  context-rules.md  data-architecture-rules.md  data-modeling-rules.md  database-rules.md  debugging-rules.md  deployment-rules.md  git-rules.md  (+7 more)
docs/: abpm-guide.html  architect-guide.html  awa-viz.js  data-model-guide.html  developer-guide.html  getting-started.html  installation-guide.html  main.js  playground.html  release_notes.md  specification.md  style.css
examples/: bank-account-opening.md  visualization-2d-bank-account-opening.html  visualization-2d-elk-hierarchy.html  visualization-2d-swimlanes.html  visualization-2d-swimlanes.json  visualization-3d-pipeline.html  visualization-3d-pipeline.json  visualization-3d-spatial.html  visualization-3d-spatial.json
sdk/python/: README.md  pyproject.toml  pytest_output.txt
sdk/python/awa/: __init__.py
sdk/python/awa/builder/: __init__.py
sdk/python/awa/cli/: __init__.py  __main__.py
sdk/python/awa/runtime/: __init__.py  context_manager.py  decision_evaluator.py  human_task_queue.py  token.py  workflow_engine.py
sdk/python/awa/runtime/actors/: __init__.py  ai_agent.py  base.py  human_agent.py  robot_agent.py  software_agent.py
sdk/python/awa/server/: __init__.py
sdk/python/awa/types/: __init__.py  visualization.py
sdk/python/awa/validator/: __init__.py
sdk/python/tests/: __init__.py  test_builder.py  test_decision_execution.py  test_token.py  test_vsm.py  test_workflow_engine.py
skills/: SKILL.md
(+144 files in other folders)
