[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awa"
version = "1.0.0"
description = "Python SDK for Agentic Workflow Architecture (AWA)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AWA Specification", email = "spec@awa.io" }
]
keywords = ["awa", "agentic", "workflow", "process", "bpmn", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://awa.io"
Repository = "https://github.com/awa-spec/awa-sdk-python"
Documentation = "https://docs.awa.io/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["awa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
